--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@fortawesome/pro-thin-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^7.1.2",
+    "i18next": "^25.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.6.1",
     "react-router-dom": "^7.6.2",
-    "slate": "^0.117.2",
+    "slate": "^0.118.0",
+    "slate-react": "^0.117.4",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
